# match-scheduler-bot

./: Makefile  README.md  bot.example.json  logging.example.json  pyproject.toml  requirements.txt
src/match_scheduler_bot/: __init__.py  cli.py  exceptions.py
src/match_scheduler_bot/bot/: __init__.py  alerts.py  announcements.py  autocomplete.py  embeds.py  responses.py  utils.py  validators.py
src/match_scheduler_bot/bot/cogs/: __init__.py  addmatch.py  delmatch.py  getmatch.py
src/match_scheduler_bot/bot/responses/: __init__.py  announcements.py  feedback.py
src/match_scheduler_bot/model/: __init__.py  config.py  matchlist.py  rows.py  snowflake.py  timestamp.py
test/unit/: test_match_scheduler_bot.py
