[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "match_scheduler_bot"
version = "0.0.1"
description = "A discord bot for scheduling msa matches"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
matchschedulerbot = "match_scheduler_bot.cli:matchschedulerbot"
